# ChangeLog for sci-mathematics/octave
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.55 2008/03/02 13:48:00 markusle Exp $

  02 Mar 2008; Markus Dittrich <markusle@gentoo.org> octave-2.1.73.ebuild,
  octave-2.1.73-r1.ebuild, octave-2.1.73-r2.ebuild:
  Exported VARTEXFONT variable to avoid sandbox violations by latex 
  (see bug #160015).

  27 Feb 2008; Markus Dittrich <markusle@gentoo.org>
  octave-2.1.73-r2.ebuild:
  Moved check for mpich2 useflag into its proper place.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing metalgod from metadata.xml as per #99350.

  25 Dec 2007; Steve Arnold <nerdboy@gentoo.org> octave-2.1.73.ebuild,
  octave-2.1.73-r1.ebuild, octave-2.1.73-r2.ebuild:
  Updated to check for mpich2 cxx interface (which breaks standard headers)
  to address bug #182904).  Unfortunately, the mpich2 headers aren't
  compatible with the standard ones (see bug #202304) so each package is
  responsible for the workaround and breakage checking; see the above bug
  for upstream octave response.  Although it kicks the build, the best way
  to handle it for now seems to be getting rid of the offending mpich2 C++
  libraries and include nastiness.

  18 Dec 2007; Markus Dittrich <markusle@gentoo.org>
  octave-2.1.73-r2.ebuild:
  Added xemacs support to ebuild (fixes bug #193430). Thanks much to
  Ulrich Mueller <ulm@gentoo.org> for his patch.

  20 Nov 2007; Markus Dittrich <markusle@gentoo.org>
  octave-2.1.57-r1.ebuild, octave-2.1.69.ebuild, octave-2.1.71-r2.ebuild,
  octave-2.1.72.ebuild, octave-2.1.73.ebuild, octave-2.1.73-r1.ebuild,
  octave-2.1.73-r2.ebuild:
  Switched tetex useflag and dependency to latex and latex-base,
  respectively (see bug #196745).

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> octave-2.1.73-r1.ebuild:
  Stable on ppc64

  20 May 2007; Raúl Porcel <armin76@gentoo.org> octave-2.1.73.ebuild: