@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/octave
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.55 2008/03/02 13:48:00 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.56 2008/04/07 13:57:31 markusle Exp $
+
+  07 Apr 2008; Markus Dittrich <markusle@gentoo.org>
+  octave-2.1.57-r1.ebuild, octave-2.1.69.ebuild:
+  Removed ifc use flag (see bug #97929).
 
   02 Mar 2008; Markus Dittrich <markusle@gentoo.org> octave-2.1.73.ebuild,
   octave-2.1.73-r1.ebuild, octave-2.1.73-r2.ebuild:
